# hacs-caffeinetracker

./: .gitignore  CHANGELOG.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  Taskfile.yml  cliff.toml  hacs.json  pyproject.toml  release-please-config.json  renovate.json
.github/workflows/: release.yml  test.yml
custom_components/caffeine_tracker/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  services.yaml  strings.json
docs/: example_scripts.yaml  lovelace.md
tests/: conftest.py  test_config_flow.py  test_coordinator.py  test_sensor.py
