[project]
name = "hacs-caffeinetracker"
version = "0.2.0"
description = "Home Assistant caffeine tracker integration"
authors = [{ name = "evanraalte" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "homeassistant>=2024.6.0",
    "voluptuous",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23.0",
    "pytest-homeassistant-custom-component>=0.13",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "pyright>=1.1",
    "syrupy>=4.0",
    "pytest-sugar",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
# E501 is handled by the formatter
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F401"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = false
